# vanguard-bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  USER_GUIDE_RU.md  ai_engine.py  backtesting.py  bot.py  bot_globals.py  cache_backend.py  charts.py  config.py  config.yaml.example  data_provider.py  docker-compose.prod.yml  forecast_tracker.py  i18n.py  logging_setup.py  ml_forecast.py  news_provider.py  portfolio_tracker.py  pyproject.toml  pytest.ini  requirements.runtime.txt  requirements.txt  utils.py
.github/workflows/: ci.yml
api/: auth.py  database.py  main.py  models.py  rate_limiter.py  schemas.py
api/routes/: analyze.py  keys.py  webhook.py
handlers/: analysis.py  commands.py  forecast.py  news.py  portfolio.py  settings.py  signals.py  watchlist.py
helm/vanguard-bot/: .helmignore  Chart.yaml  values.staging.yaml  values.yaml
helm/vanguard-bot/templates/: _helpers.tpl  api-deployment.yaml  bot-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  redis.yaml  secret.yaml  serviceaccount.yaml
k8s/: kustomization.yaml  namespace.yaml
k8s/api/: deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
k8s/bot/: configmap.yaml  deployment.yaml  secret.yaml.example  serviceaccount.yaml
k8s/redis/: deployment.yaml  service.yaml
scripts/: create_api_key.py  deploy_k8s.sh  healthcheck.py  k8s-deploy.sh  runtime_watchdog.py  smoke_test.sh
tests/: test_ai_engine.py  test_api.py  test_bot_smoke.py  test_cache_backend.py  test_data_provider.py  test_deepseek_live.py  test_handlers_commands.py  test_portfolio_tracker.py
utils/: trace.py
